# ai-bot

./: .env.example  .gitignore  README.md  bimbim.py  bot.py  pyproject.toml  requirements.txt  system_prompt.md
src/: logo_text.md
